# fastapi

./: .env  main.py  migrate.py  pyproject.toml  requirements.txt  settings.py
app/: models.py  serializer.py  views.py
