[tool.poetry]
name = "fastapi_proj"
version = "0.1.0"
description = ""
authors = ["ImAgiD <daurbekoaajgerim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
unicorn = {extras = ["standard"], version = "^2.0.1"}
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.29"
python-decouple = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
